Jumpy Navbar bc of Scrollbar fix

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,6 +3,8 @@
 @import "messages";
 @import "profile";
 
+html { overflow-y: scroll; }
+
 h1 {
   padding-top: 1.25rem;
 }
